# frameprobe

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
bench/: throughput_bench.cpp
bench/results/: bench_local.json
docs/: adaptive-skip.md  bench.md  detector.md  metrics.md  parallel-inference.md  pipeline.md  soft-realtime.md
models/: README.md
src/: main.cpp
src/detect/: detector.h  dnn_detector.cpp  dnn_detector.h  serialize.cpp  serialize.h  stub_detector.cpp  stub_detector.h
src/metrics/: frame_stats.cpp  frame_stats.h  latency_hist.cpp  latency_hist.h
src/pipeline/: adaptive.h  decoder.cpp  decoder.h  harness.cpp  harness.h  inference.cpp  inference.h  queue.h  sink.cpp  sink.h
src/source/: frame.h  source.h  synthetic_source.cpp  synthetic_source.h  video_source.cpp  video_source.h
tests/e2e/: pipeline_e2e_test.cpp
tests/fuzz/: fuzz_detection.cpp
tests/unit/: adaptive_test.cpp  metrics_test.cpp  pipeline_concurrency_test.cpp  property_test.cpp  queue_test.cpp  reorder_test.cpp  serialize_test.cpp  stub_detector_test.cpp  synthetic_source_test.cpp
